@@ -1,4 +1,4 @@
-// Copyright (c) 2018, 2023, Oracle and/or its affiliates.
+// Copyright (c) 2018, 2024, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator;
@@ -565,7 +565,7 @@ public class DomainStatusUpdater {
 
     @Nonnull
     private Long getDomainGeneration(@Nonnull DomainResource domain) {
-      return Optional.ofNullable(domain.getMetadata()).map(V1ObjectMeta::getGeneration).orElse(0L);
+      return Optional.of(domain.getMetadata()).map(V1ObjectMeta::getGeneration).orElse(0L);
     }
 
     @Nonnull
@@ -577,7 +577,8 @@ public class DomainStatusUpdater {
     void addFailure(DomainStatus status, DomainCondition condition) {
       addFailureCondition(status, condition);
       if (hasReachedRetryLimit(status, condition)) {
-        addFailureCondition(status, new DomainCondition(FAILED).withReason(ABORTED).withMessage(getFatalMessage()));
+        addFailureCondition(status, new DomainCondition(FAILED).withReason(ABORTED)
+            .withFailureInfo(getDomain().getSpec()).withMessage(getFatalMessage()));
       }
     }
 
@@ -725,7 +726,7 @@ public class DomainStatusUpdater {
         return conditions.getNewConditions().stream()
             .map(this::toEvent)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
       }
 
       private EventData toEvent(DomainCondition newCondition) {
@@ -736,7 +737,7 @@ public class DomainStatusUpdater {
         return conditions.getRemovedConditions().stream()
             .map(this::toRemovedEvent)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
       }
 
       private EventData toRemovedEvent(DomainCondition removedCondition) {
@@ -748,11 +749,14 @@ public class DomainStatusUpdater {
         newConditions.apply();
 
         if (isHasFailedPod()) {
-          addFailure(status, new DomainCondition(FAILED).withReason(SERVER_POD).withMessage(getPodFailedMessage()));
+          addFailure(status, new DomainCondition(FAILED).withReason(SERVER_POD)
+              .withFailureInfo(getDomain().getSpec()).withMessage(getPodFailedMessage()));
         } else if (hasPodNotRunningInTime()) {
-          addFailure(status, new DomainCondition(FAILED).withReason(SERVER_POD).withMessage(getPodNotRunningMessage()));
+          addFailure(status, new DomainCondition(FAILED).withReason(SERVER_POD)
+              .withFailureInfo(getDomain().getSpec()).withMessage(getPodNotRunningMessage()));
         } else if (hasPodNotReadyInTime()) {
-          addFailure(status, new DomainCondition(FAILED).withReason(SERVER_POD).withMessage(getPodNotReadyMessage()));
+          addFailure(status, new DomainCondition(FAILED).withReason(SERVER_POD)
+              .withFailureInfo(getDomain().getSpec()).withMessage(getPodNotReadyMessage()));
         } else {
           status.removeConditionsMatching(c -> c.hasType(FAILED) && SERVER_POD == c.getReason());
           if (newConditions.allIntendedServersReady() && !stillHasPodPendingRestart(status)) {
@@ -810,7 +814,7 @@ public class DomainStatusUpdater {
               .stream()
               .filter(c -> "True".equals(c.getStatus()))
               .filter(c -> oldStatus == null || oldStatus.lacksConditionWith(matchFor(c)))
-              .collect(Collectors.toList());
+              .toList();
         }
 
         List<DomainCondition> getRemovedConditions() {
@@ -819,7 +823,7 @@ public class DomainStatusUpdater {
               .stream()
               .filter(c -> "True".equals(c.getStatus()))
               .filter(c -> status == null || status.lacksConditionWith(matchFor(c)))
-              .collect(Collectors.toList());
+              .toList();
         }
 
         private boolean failureReasonMatch(DomainCondition c1, DomainCondition c2) {
@@ -866,7 +870,7 @@ public class DomainStatusUpdater {
         }
 
         private List<String> getNonStartedServersWithState() {
-          return serverState.keySet().stream().filter(this::isNonStartedServer).collect(Collectors.toList());
+          return serverState.keySet().stream().filter(this::isNonStartedServer).toList();
         }
 
         private boolean isNonStartedServer(String serverName) {
@@ -879,7 +883,7 @@ public class DomainStatusUpdater {
 
         private @Nonnull List<String> getNonClusteredServers() {
           return expectedRunningServers.stream().filter(
-              StatusUpdateContext.this::isNonClusteredServer).collect(Collectors.toList());
+              StatusUpdateContext.this::isNonClusteredServer).toList();
         }
 
         private boolean allIntendedServersReady() {
@@ -916,7 +920,7 @@ public class DomainStatusUpdater {
 
         @Nonnull
         private List<String> createUnavailableClustersMessage(List<ClusterCheck> unavailableClusters) {
-          return unavailableClusters.stream().map(ClusterCheck::createNotReadyMessage).collect(Collectors.toList());
+          return unavailableClusters.stream().map(ClusterCheck::createNotReadyMessage).toList();
         }
 
         private DomainCondition createNotAvailableCondition(String message) {
@@ -924,11 +928,11 @@ public class DomainStatusUpdater {
         }
 
         private List<String> getUnreadyNonClusteredServers() {
-          return getNonClusteredServers().stream().filter(this::isServerNotReady).collect(Collectors.toList());
+          return getNonClusteredServers().stream().filter(this::isServerNotReady).toList();
         }
 
         private List<ClusterCheck> getUnavailableClusters() {
-          return Arrays.stream(clusterChecks).filter(this::isUnavailable).collect(Collectors.toList());
+          return Arrays.stream(clusterChecks).filter(this::isUnavailable).toList();
         }
 
         private boolean isServerNotReady(@Nonnull String serverName) {
@@ -1005,7 +1009,7 @@ public class DomainStatusUpdater {
               .filter(s -> clusterName.equals(s.getClusterName()))
               .map(ServerStatus::getServerName)
               .filter(expectedRunningServers::contains)
-              .collect(Collectors.toList());
+              .toList();
         }
 
         private List<String> getNonStartedClusteredServers(DomainStatus domainStatus, String clusterName) {
@@ -1013,7 +1017,7 @@ public class DomainStatusUpdater {
               .filter(s -> clusterName.equals(s.getClusterName()))
               .map(ServerStatus::getServerName)
               .filter(name -> !expectedRunningServers.contains(name))
-              .collect(Collectors.toList());
+              .toList();
         }
 
         boolean isAvailable() {
@@ -1150,8 +1154,8 @@ public class DomainStatusUpdater {
         }
 
         private boolean isReadyCondition(Object condition) {
-          return (condition instanceof V1PodCondition)
-              && "Ready".equals(((V1PodCondition)condition).getType());
+          return (condition instanceof V1PodCondition podCondition)
+              && "Ready".equals(podCondition.getType());
         }
 
         private boolean isPhaseRunning(V1PodStatus status) {
@@ -1468,10 +1472,10 @@ public class DomainStatusUpdater {
     public void setStatusDetails(DomainStatus status) {
       status.setServers(domainConfig.getAllServers().stream()
           .map(this::createServerStatus)
-          .collect(Collectors.toList()));
+          .toList());
       status.setClusters(domainConfig.getConfiguredClusters().stream()
           .map(this::createClusterStatus)
-          .collect(Collectors.toList()));
+          .toList());
     }
 
     class ServerStatusFactory {
@@ -1586,7 +1590,8 @@ public class DomainStatusUpdater {
       @Override
       void modifyStatus(DomainStatus status) {
         removingReasons.forEach(status::markFailuresForRemoval);
-        addFailure(status, status.createAdjustedFailedCondition(reason, message, isInitializeDomainOnPV()));
+        addFailure(status, status.createAdjustedFailedCondition(reason, message, isInitializeDomainOnPV(),
+            getDomain().getSpec()));
         status.addCondition(new DomainCondition(COMPLETED).withStatus(false), isInitializeDomainOnPV());
         Optional.ofNullable(jobUid).ifPresent(status::setFailedIntrospectionUid);
         status.removeMarkedFailures();
