@@ -1,4 +1,4 @@
-// Copyright (c) 2018, 2023, Oracle and/or its affiliates.
+// Copyright (c) 2018, 2024, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.helpers;
@@ -49,6 +49,7 @@ import oracle.kubernetes.utils.SystemClock;
 import oracle.kubernetes.weblogic.domain.model.ClusterResource;
 import oracle.kubernetes.weblogic.domain.model.ClusterSpec;
 import oracle.kubernetes.weblogic.domain.model.ClusterStatus;
+import oracle.kubernetes.weblogic.domain.model.DomainConditionFailureInfo;
 import oracle.kubernetes.weblogic.domain.model.DomainResource;
 import oracle.kubernetes.weblogic.domain.model.DomainSpec;
 import oracle.kubernetes.weblogic.domain.model.DomainStatus;
@@ -138,6 +139,10 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
     return getGeneration(getDomain()).compareTo(getGeneration(cachedInfo.getDomain())) > 0;
   }
 
+  public boolean isMustDomainProcessingRestart() {
+    return !failureInfoVersionsUnchanged();
+  }
+
   /**
    * Returns true if the state of the current domain presence info, when compared with the cached info for the same
    * domain, indicates that the make-right should not be run. The user has a number of options to resume processing
@@ -153,6 +158,21 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
             .map(DomainResource::getStatus)
             .map(DomainStatus::isAborted)
             .orElse(false);
+  }
+
+  private DomainConditionFailureInfo findFailureInfo() {
+    return Optional.ofNullable(getDomain()).map(DomainResource::getStatus)
+        .map(DomainStatus::getFailureInfo).orElse(null);
+  }
+
+  private boolean failureInfoVersionsUnchanged() {
+    return Optional.ofNullable(findFailureInfo()).map(this::versionsUnchanged).orElse(true);
+  }
+
+  private boolean versionsUnchanged(DomainConditionFailureInfo failureInfo) {
+    return hasSameIntrospectVersion(failureInfo)
+        && hasSameRestartVersion(failureInfo)
+        && hasSameIntrospectImage(failureInfo);
   }
 
   private boolean versionsUnchanged(DomainPresenceInfo cachedInfo) {
@@ -176,8 +196,12 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
         || !KubernetesUtils.isFirstNewer(cachedInfo.getDomain().getMetadata(), getDomain().getMetadata());
   }
 
-  private boolean hasSameIntrospectVersion(DomainPresenceInfo cachedInfo) {
+  private boolean  hasSameIntrospectVersion(DomainPresenceInfo cachedInfo) {
     return Objects.equals(getIntrospectVersion(), cachedInfo.getIntrospectVersion());
+  }
+
+  private boolean  hasSameIntrospectVersion(DomainConditionFailureInfo failureInfo) {
+    return Objects.equals(getIntrospectVersion(), failureInfo.getIntrospectVersion());
   }
 
   private String getIntrospectVersion() {
@@ -191,6 +215,10 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
     return Objects.equals(getRestartVersion(), cachedInfo.getRestartVersion());
   }
 
+  private boolean hasSameRestartVersion(DomainConditionFailureInfo failureInfo) {
+    return Objects.equals(getRestartVersion(), failureInfo.getRestartVersion());
+  }
+
   private String getRestartVersion() {
     return Optional.ofNullable(getDomain())
         .map(DomainResource::getRestartVersion)
@@ -199,6 +227,10 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
 
   private boolean hasSameIntrospectImage(DomainPresenceInfo cachedInfo) {
     return Objects.equals(getIntrospectImage(), cachedInfo.getIntrospectImage());
+  }
+
+  private boolean hasSameIntrospectImage(DomainConditionFailureInfo failureInfo) {
+    return Objects.equals(getIntrospectImage(), failureInfo.getIntrospectImage());
   }
 
   private String getIntrospectImage() {
@@ -637,7 +669,7 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
     try {
       if (webLogicCredentialsSecretLastSet == null
           || webLogicCredentialsSecretLastSet.isAfter(
-              SystemClock.now().minusSeconds(getWeblogicCredentialsSecretRereadIntervalSeconds()))) {
+              SystemClock.now().minusSeconds(getWebLogicCredentialsSecretRereadIntervalSeconds()))) {
         return webLogicCredentialsSecret;
       }
     } finally {
@@ -649,7 +681,7 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
     return null;
   }
 
-  private int getWeblogicCredentialsSecretRereadIntervalSeconds() {
+  private int getWebLogicCredentialsSecretRereadIntervalSeconds() {
     return TuningParameters.getInstance().getCredentialsSecretRereadIntervalSeconds();
   }
 
@@ -771,7 +803,7 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
     return servers.entrySet().stream()
           .filter(e -> hasMatchingServer(e, criteria))
           .map(Map.Entry::getKey)
-          .collect(Collectors.toList());
+          .toList();
   }
 
   private boolean hasMatchingServer(Map.Entry<String, ServerKubernetesObjects> e, Predicate<V1Pod> criteria) {
@@ -933,7 +965,7 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
 
   public List<ClusterResource> getReferencedClusters() {
     return Optional.ofNullable(getDomain().getSpec().getClusters()).orElse(Collections.emptyList())
-        .stream().map(this::findCluster).filter(Objects::nonNull).collect(Collectors.toList());
+        .stream().map(this::findCluster).filter(Objects::nonNull).toList();
   }
 
   private ClusterResource findCluster(V1LocalObjectReference reference) {
@@ -1080,8 +1112,8 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
     return clusters.values();
   }
 
-  public boolean hasRetriableFailure() {
-    return Optional.ofNullable(getDomain()).map(DomainResource::hasRetriableFailure).orElse(false);
+  public boolean hasRetryableFailure() {
+    return Optional.ofNullable(getDomain()).map(DomainResource::hasRetryableFailure).orElse(false);
   }
 
   /** Details about a specific managed server. */
@@ -1204,7 +1236,7 @@ public class DomainPresenceInfo extends ResourcePresenceInfo {
     /**
      * Create server shutdown info.
      *
-     * @param serverName the name of the server to shutdown
+     * @param serverName the name of the server to shut down
      * @param clusterName the name of the cluster
      */
     public ServerShutdownInfo(String serverName, String clusterName) {
